# xAndroid

./: .commit_template  .gitignore  LICENSE  README.md  build.gradle  constants.gradle  core_settings.gradle  gradle.properties  publish.gradle  settings.gradle  upload.bat  upload.sh
.github/workflows/: android-develop.yml  android.yml
adaptive/: build.gradle
adaptive/src/main/: AndroidManifest.xml
adaptive/src/main/res/values/: strings.xml
androlua/: CMakeLists.txt  build.gradle
androlua/src/androidTest/java/com/coopsrc/cicada/androlua/: ExampleInstrumentedTest.java
androlua/src/androidTest/java/com/coopsrc/xandroid/androlua/: ExampleInstrumentedTest.java
androlua/src/main/: AndroidManifest.xml
androlua/src/main/cpp/: CMakeLists.txt  androlua.cpp
androlua/src/main/cpp/androlua/: CMakeLists.txt
androlua/src/main/cpp/androlua/include/: androlua.h
androlua/src/main/cpp/androlua/src/: androlua.cpp
androlua/src/main/cpp/include/: logger.h
androlua/src/main/cpp/includes/: androlua.h
androlua/src/main/cpp/lua/: CMakeLists.txt
androlua/src/main/java/com/coopsrc/cicada/androlua/: Androlua.java
androlua/src/main/java/com/coopsrc/xandroid/androlua/: Androlua.java
androlua/src/test/java/com/coopsrc/cicada/androlua/: ExampleUnitTest.java
androlua/src/test/java/com/coopsrc/xandroid/androlua/: ExampleUnitTest.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
demos/: build.gradle
demos/src/main/: AndroidManifest.xml
demos/src/main/assets/adnrolua/: test.lua
demos/src/main/res/layout/: activity_androlua.xml  activity_blur.xml  activity_downloader.xml  activity_frame_sequence.xml  activity_main.xml  activity_particle.xml  activity_particle_render.xml  activity_simple_download.xml  content_downloader.xml  content_frame_sequence.xml  content_particle.xml
demos/src/main/res/values/: strings.xml
dewdrops/: CMakeLists.txt  build.gradle
dewdrops-blur/: CMakeLists.txt  build.gradle
dewdrops-blur/src/androidTest/java/com/coopsrc/xandroid/dewdrops/example/: ExampleInstrumentedTest.java
dewdrops-blur/src/main/: AndroidManifest.xml
dewdrops-blur/src/main/cpp/: stack_blur.cpp
dewdrops-blur/src/main/cpp/includes/: blur_utils.h  box_blur.h  gaussian_blur.h  logger.h  stack_blur.h
dewdrops-blur/src/main/java/com/coopsrc/xandroid/dewdrops/: DewdropsBlur.java
dewdrops-blur/src/main/java/com/coopsrc/xandroid/dewdrops/blur/: NativeBlur.java  OriginalBoxBlur.java  OriginalGaussianBlur.java  OriginalStackBlur.java
dewdrops-blur/src/main/java/com/coopsrc/xandroid/dewdrops/config/: BlurConfig.java
dewdrops-blur/src/main/java/com/coopsrc/xandroid/dewdrops/example/: MainActivity.java
dewdrops-blur/src/main/java/com/coopsrc/xandroid/dewdrops/processor/: AbsBlurProcessor.java  BlurProcessorFactory.java  IBlurProcessor.java  IProcessorBuilder.java  OriginalBlurProcessor.java  ProcessorBuilder.java
dewdrops-blur/src/main/java/com/coopsrc/xandroid/dewdrops/task/: BlurTaskManager.java
dewdrops-blur/src/main/java/com/coopsrc/xandroid/dewdrops/utils/: BitmapUtils.java
dewdrops-blur/src/main/res/values/: strings.xml
dewdrops-blur/src/main/rs/: BoxBlur.rs
dewdrops/src/main/cpp/: blur_utils.cpp  box_blur.cpp  dewdrops_blur.cpp  gaussian_blur.cpp  stack_blur.cpp
dewdrops/src/main/java/com/coopsrc/xandroid/dewdrops/: DewdropsBlur.java
dewdrops/src/main/java/com/coopsrc/xandroid/dewdrops/annotation/: Direction.java  Mode.java  Scheme.java
dewdrops/src/main/java/com/coopsrc/xandroid/dewdrops/blur/: NativeBlur.java  OriginBlur.java  OriginalBlur.java  OriginalBoxBlur.java  OriginalGaussianBlur.java  OriginalStackBlur.java
dewdrops/src/main/java/com/coopsrc/xandroid/dewdrops/config/: BlurConfig.java
dewdrops/src/main/java/com/coopsrc/xandroid/dewdrops/processor/: AbsBlurProcessor.java  BlurProcessor.java  IBlurProcessor.java  IProcessorBuilder.java  NativeBlurProcessor.java  OriginalBlurProcessor.java  ProcessorBuilder.java  RenderScriptBlurProcessor.java
dewdrops/src/main/java/com/coopsrc/xandroid/dewdrops/task/: BlurTask.java  BlurTaskManager.java  TaskCallback.java
dewdrops/src/main/java/com/coopsrc/xandroid/dewdrops/utils/: MathUtils.java  Preconditions.java
dewdrops/src/main/java/com/coopsrc/xandroid/dewdrops/widget/: DragBlurringView.java
dewdrops/src/main/rs/: StackBlur.rs
downloader/: build.gradle
downloader-example/: build.gradle
downloader-example/src/main/: AndroidManifest.xml
downloader-example/src/main/res/layout/: activity_compare.xml  activity_list.xml  activity_main.xml  (+8 more)
downloader/src/main/: AndroidManifest.xml
examples/dewdrops-blur/: build.gradle
examples/dewdrops-blur-example/: build.gradle
examples/dewdrops-blur/src/main/: AndroidManifest.xml
examples/downloader-example/: build.gradle
examples/downloader-example/src/main/: AndroidManifest.xml
framesequence/: CMakeLists.txt  README.md  build.gradle
framesequence/src/main/: AndroidManifest.xml
framesequence/src/main/cpp/: CMakeLists.txt
framesequence/src/main/cpp/giflib/: CMakeLists.txt
framesequence/src/main/cpp/webp/: CMakeLists.txt
framesequence/src/main/java/android/support/rastermill/: FrameSequence.java
framesequence/src/main/java/com/coopsrc/xandroid/framesequence/: FrameSequenceDecoder.java  FrameSequenceDrawableResource.java  FrameSequenceGlideModule.java  GlideBitmapProvider.java
framesequence/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
http/: build.gradle
http-monitor/: build.gradle
http-monitor-noop/: build.gradle
http-monitor-noop/src/main/: AndroidManifest.xml
http-monitor/src/main/: AndroidManifest.xml
http/src/main/: AndroidManifest.xml
particle/: build.gradle
particle/src/main/: AndroidManifest.xml
selector/: build.gradle
selector/src/main/: AndroidManifest.xml
startup/: build.gradle
startup/src/main/: AndroidManifest.xml
utils/: build.gradle
utils/src/main/: AndroidManifest.xml
widget/: build.gradle
widget/src/main/: AndroidManifest.xml
(+321 files in other folders)
